--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </li>
       </ul>
     </nav>
-    <div id="tic-tac-toe" class="size_3">
+    <div id="tic_tac_toe" class="size_3">
       <h1>Tic Tac Toe</h1>
       <div class="row">
         <div class="card">
@@ -59,9 +59,8 @@
         </div>
       </div>
       <div class="row" id="game"></div>
-      <div class="clr">&nbsp;</div>
       <div>
-        <a href="#" id="sidebarCollapse" class="btn btn-info">Toggle Settings</a>
+        <a href="#" id="sidebar_collapse" class="btn btn-info">Toggle Settings</a>
       </div>
     </div>
   </div>
