--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </li>
       </ul>
     </nav>
-    <div id="tic_tac_toe" class="size_3">
+    <div id="tic_tac_toe">
       <h1>Tic Tac Toe</h1>
       <div class="row">
         <div class="card">
