--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="wrapper">
-    <nav id="sidebar">
+    <nav id="sidebar" class="active">
       <div class="sidebar-header">
         <h3>Settings</h3>
       </div>
